// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render MainPage with isPending false render MainPage without crashing 1`] = `
<div
  className="tc"
>
  <Header />
  <SearchBox />
  <Scroll>
    <ErrorBoundary>
      <CardList
        robots={[Function]}
      />
    </ErrorBoundary>
  </Scroll>
</div>
`;

exports[`render MainPage with isPending true 1`] = `
<div
  className="tc"
>
  <Header />
  <SearchBox />
  <Scroll>
    <h1>
      Loading
    </h1>
  </Scroll>
</div>
`;

exports[`render MainPage without crashing 1`] = `
<div
  className="tc"
>
  <Header />
  <SearchBox />
  <Scroll>
    <ErrorBoundary>
      <CardList
        robots={[Function]}
      />
    </ErrorBoundary>
  </Scroll>
</div>
`;
